[Fix] Sound Path

--- a/log.1
+++ b/log.1
@@ -1,22 +1,31 @@
-[INFO|10:28:58]: Started loading resources. 
-[FINE|10:28:58]: Sprite Ship loaded. 
-[FINE|10:28:58]: Sprite ShipDestroyed loaded. 
-[FINE|10:28:58]: Sprite Bullet loaded. 
-[FINE|10:28:58]: Sprite EnemyBullet loaded. 
-[FINE|10:28:58]: Sprite EnemyBulletN loaded. 
-[FINE|10:28:58]: Sprite EnemyBulletH loaded. 
-[FINE|10:28:58]: Sprite EnemyShipA1 loaded. 
-[FINE|10:28:58]: Sprite EnemyShipA2 loaded. 
-[FINE|10:28:58]: Sprite EnemyShipB1 loaded. 
-[FINE|10:28:58]: Sprite EnemyShipB2 loaded. 
-[FINE|10:28:58]: Sprite EnemyShipC1 loaded. 
-[FINE|10:28:58]: Sprite EnemyShipC2 loaded. 
-[FINE|10:28:58]: Sprite EnemyShipSpecial loaded. 
-[FINE|10:28:58]: Sprite Explosion loaded. 
-[FINE|10:28:58]: Sprite Explosion2 loaded. 
-[FINE|10:28:58]: Sprite Explosion3 loaded. 
-[FINE|10:28:58]: Sprite Explosion4 loaded. 
-[FINE|10:28:58]: Sprite Item loaded. 
-[INFO|10:28:58]: Finished loading the sprites. 
-[WARNING|10:28:58]: Loading failed. 
-[INFO|10:28:58]: Starting 448x520 title screen at 60 fps. 
+[INFO|5:18:30]: Started loading resources. 
+[FINE|5:18:30]: Sprite Ship loaded. 
+[FINE|5:18:30]: Sprite ShipDestroyed loaded. 
+[FINE|5:18:30]: Sprite Bullet loaded. 
+[FINE|5:18:30]: Sprite EnemyBullet loaded. 
+[FINE|5:18:30]: Sprite EnemyBulletN loaded. 
+[FINE|5:18:30]: Sprite EnemyBulletH loaded. 
+[FINE|5:18:30]: Sprite EnemyShipA1 loaded. 
+[FINE|5:18:30]: Sprite EnemyShipA2 loaded. 
+[FINE|5:18:30]: Sprite EnemyShipB1 loaded. 
+[FINE|5:18:30]: Sprite EnemyShipB2 loaded. 
+[FINE|5:18:30]: Sprite EnemyShipC1 loaded. 
+[FINE|5:18:30]: Sprite EnemyShipC2 loaded. 
+[FINE|5:18:30]: Sprite EnemyShipSpecial loaded. 
+[FINE|5:18:30]: Sprite Explosion loaded. 
+[FINE|5:18:30]: Sprite Explosion2 loaded. 
+[FINE|5:18:30]: Sprite Explosion3 loaded. 
+[FINE|5:18:30]: Sprite Explosion4 loaded. 
+[FINE|5:18:30]: Sprite Item loaded. 
+[FINE|5:18:30]: Sprite ShipLive loaded. 
+[FINE|5:18:30]: Sprite ShipB loaded. 
+[FINE|5:18:30]: Sprite ShipC loaded. 
+[INFO|5:18:30]: Finished loading the sprites. 
+[INFO|5:18:30]: Finished loading the fonts. 
+[INFO|5:18:30]: Starting 448x520 title screen at 60 fps. 
+[INFO|5:18:31]: Closing title screen. 
+[INFO|5:18:31]: Starting 448x520 setting screen at 60 fps. 
+[INFO|5:18:35]: Closing setting screen. 
+[INFO|5:18:35]: Select your difficulty 0 is practice, 1 is easy, 2 is normal, 3 is hard 
+[INFO|5:18:35]: Starting 448x520 game screen at 60 fps. 
+[INFO|5:18:35]: Initializing 6x4 ship formation in (20,100) 
